# MapWith

./: .gitignore  .travis.yml  ChangeLog.md  LICENSE  MapWith.cabal  README.md
doc/: Benchmarks.ods  Benchmarks.xlsx  examples.hs
perf/: BechmarksPerf.hs  BechmarksSimpl.hs  Benchmarks.hs  CurryNPerf.hs  Foldl.hs  FoldlBaseline.hs  IndEnd.hs  IndEndBaseline.hs  PrevNext.hs  PrevNextBaseline.hs  Tuning.hs
src/: AppTuple.hs  CurryN.hs  CurryTF.hs  MapWith.hs
test/: CurryNTest.hs  CurryTFTest.hs  MapWithTest.hs
